# League-of-Legends-Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml
app/: agent_logger.py  api.py  main.py
app/agent/: graph.py  llm.py
app/agent/nodes/: general.py  opgg_worker.py  research_worker.py  supervisor.py
backend/: main.py  pyproject.toml
backend/app/: api.py
backend/app/agent/: graph.py  llm.py  state.py
backend/app/agent/nodes/: general.py  opgg_worker.py  research_worker.py  (+1 more)
backend/test/: inspect_lol.py  inspect_opgg.py  inspect_stream_events.py  test_agent.py  test_astream_events.py  test_openrouter_tokens.py  test_research_node.py  test_robustness.py  test_sse_stream.py
frontend/: index.html  package.json  style.css
frontend/src/: App.jsx  index.css
frontend/src/components/: Backgrounds.jsx  LandingView.jsx  Particles.jsx
frontend/src/hooks/: useChatStream.js
opgg-mcp/: README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.zh-CN.md  README.zh-TW.md  package-lock.json
opgg-mcp/docs/apps-sdk/: _blog_realtime-api_.txt  _codex_cloud_code-review_.txt  _codex_pricing_.txt  _tracks_ai-application-development_.txt  _tracks_building-agents.txt  apps-sdk_app-developer-guidelines.txt  apps-sdk_build_custom-ux_.txt  apps-sdk_build_examples.txt  apps-sdk_plan_components.txt  apps-sdk_plan_use-case.txt
opgg-mcp/src/: proxy-server.ts
static/: index.html  script.js  style.css
test/: debug_agent.py  test_full_agent.py  test_gemini.py  test_opgg_node.py  test_reddit_node.py
